add index and css file

--- a/index.html
+++ b/index.html
@@ -36,11 +36,17 @@
         </header>
     <!-- <section> -->
         <section class="section1">
-            <img src="imiges/section1_cover.png" alt="section1" class="section1_cover">
             <article class="section1_article">
                 <h3 class="section1_title">TRAVEL NEWS</h3>
                 <p class="section1_p">Lorem ipsum dolor sit amet consectetur. Lectus diam turpis condimentum convallis in. Ac lorem cras laoreet proin suscipit tempor nibh fermentum. Quisque varius sit elit placerat nulla ullamcorper eget. Lobortis semper nec augue sed aliquam. In eget mattis dui arcu mauris blandit. Elementum neque magna vestibulum amet sagittis vel.</p>
             </article>
+            <section class="section2">
+                <article class="section2_article">
+                    <h4>DISCOVERY</h4>
+                </article>
+
+
+            </section>
     <!-- <footer> -->
         <footer></footer>
     </div>
