--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/laptop.css">
+    <link rel="stylesheet" href="css/tablet.css">
+    <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
     <div class="container">
-        <!-- <header> -->
-        <header>
-            <a href="index.html"> <img src="imiges/Vector (2).svg" alt="ferst logo"> 
-            </a>
-            <h2>Travel Day.com</h2>
+        <div class="header_div">
+            <!-- <header> -->
+            <header>
+                <a href="index.html"> <img src="imiges/Vector (2).svg" alt="ferst logo"> 
+                    <span>Travel Day.com</span>
+                </a>
+        </div>
             <div class="nav">
                 <ul class="navbar_ul">
                     <li>
@@ -42,7 +47,7 @@
             </article>
             <section class="section2">
                 <article class="section2_article">
-                    <h4>DISCOVERY</h4>
+                    <!-- <h4>DISCOVERY</h4> -->
                 </article>
 
 
