add index, css, leptop, tablet and mobile files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,50 +11,86 @@
     <link rel="stylesheet" href="css/tablet.css">
     <link rel="stylesheet" href="css/mobile.css">
 </head>
+
 <body>
     <div class="container">
         <div class="header_div">
             <!-- <header> -->
             <header>
-                <a href="index.html"> <img src="imiges/Vector (2).svg" alt="ferst logo"> 
+                <a href="index.html"> <img src="imiges/Vector (2).svg" alt="ferst logo">
                     <span>Travel Day.com</span>
                 </a>
         </div>
-            <div class="nav">
-                <ul class="navbar_ul">
-                    <li>
-                        <a href="index.html" class="active">Home</a>
-                    </li>
-                    <li>
-                        <a href="index.html" class="active">Discover</a>
-                    </li>
-                    <li>
-                        <a href="index.html" class="active">Photo</a>
-                    </li>
-                    <li>
-                        <a href="index.html" class="active">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <a href="index.html">
-                <img src="imiges/user-icon.svg" alt="icon">
-            </a>
+        <div class="nav">
+            <ul class="navbar_ul">
+                <li>
+                    <a href="index.html" class="inactive">Home</a>
+                </li>
+                <li>
+                    <a href="index.html" class="inactive">Discover</a>
+                </li>
+                <li>
+                    <a href="index.html" class="inactive">Photo</a>
+                </li>
+                <li>
+                    <a href="index.html" class="inactive">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <!-- <a href="index.html">
+            <img src="imiges/user-icon.svg" alt="icon" class="icon">
+        </a> -->
+        <!-- ჰორიზონტალურად არ გაისტილა და აგიტომ დავაკომენტარე :( -->
         </header>
-    <!-- <section> -->
+        <!-- <section> -->
         <section class="section1">
             <article class="section1_article">
                 <h3 class="section1_title">TRAVEL NEWS</h3>
-                <p class="section1_p">Lorem ipsum dolor sit amet consectetur. Lectus diam turpis condimentum convallis in. Ac lorem cras laoreet proin suscipit tempor nibh fermentum. Quisque varius sit elit placerat nulla ullamcorper eget. Lobortis semper nec augue sed aliquam. In eget mattis dui arcu mauris blandit. Elementum neque magna vestibulum amet sagittis vel.</p>
+                <p class="section1_p">Lorem ipsum dolor sit amet consectetur. Lectus diam turpis condimentum convallis
+                    in. Ac lorem cras laoreet proin suscipit tempor nibh fermentum. Quisque varius sit elit placerat
+                    nulla ullamcorper eget. Lobortis semper nec augue sed aliquam. In eget mattis dui arcu mauris
+                    blandit. Elementum neque magna vestibulum amet sagittis vel.</p>
             </article>
+        </section>
+
             <section class="section2">
-                <article class="section2_article">
-                    <!-- <h4>DISCOVERY</h4> -->
-                </article>
-
-
+                <h2>DISCOVERY</h2>
             </section>
-    <!-- <footer> -->
-        <footer></footer>
-    </div>
+            <section class="section_cards">
+                <article class="active">
+                    <img src="imiges/discovery1.png" alt="first card" class="card_img">
+                    <h5>Lorem ipsum dolor</h5>
+                    <p class="section_cards_p">sit amet consectetur. Lectus diam turpis proin suscipit tempor nibh fermentum.</p>
+                </article>
+                <article class="active">
+                    <img src="imiges/discovery1 (1).png" alt="second card" class="card_img">
+                    <h5>Lorem ipsum dolor</h5>
+                    <p class="section_cards_p">sit amet consectetur. Lectus diam turpis proin suscipit tempor nibh fermentum.</p>
+                </article>
+                <article class="active">
+                    <img src="imiges/discovery1 (2).png" alt="Third card">
+                    <h5>Lorem ipsum dolor</h5>
+                    <p class="section_cards_p">sit amet consectetur. Lectus diam turpis proin suscipit tempor nibh fermentum.</p>
+                </article>
+            </section>
+
+            <section class="section3">
+                <div class="section3_img_container">
+                    <img src="imiges/Rectangle 27.png" alt="first photo">
+                </div>
+                <article class="section3_article">
+                    <h6>PHOTOGRAPH</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur. Scelerisque sit tempus viverra mauris. Risus velit sed massa a lacus bibendum ullamcorper massa. Lectus urna elementum id lorem netus a nisl sit ac. Lorem erat in lacus feugiat non aliquam...</p>
+                    <button >READ MORE</button>
+                </article>
+            </section>
+            <div class="footer-div">
+                <!-- footer -->
+                <footer>
+                   <a href="index.html"> <img src="imiges/footer-logo.svg" alt="ferst logo" class="logo">
+                   </a>
+                </footer>
+            </div>
 </body>
+
 </html>
